--- a/Index.html
+++ b/Index.html
@@ -7,8 +7,59 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" /> 
 </head>
+
 <body>
+
+
+    <header>
+        <h1 id="username">Soko77788</h1>
+            <nav>
+                <ul>
+                    <li>About Me</li>
+                    <li>Work</li>
+                    <li>Contact Me</li>
+                    <li>Resume</li>
+                </ul>
+            </nav>
+    </header>
     
-    <h1>TESTING</h1>
+    <main>
+    <Section>
+        Department of Delightful Deployed Apps!
+    </Section>
+    
+    <Aside>
+        <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestiae consequuntur ex, ab eaque distinctio saepe adipisci dignissimos delectus sit consequatur blanditiis atque eius voluptates perferendis aspernatur temporibus voluptas voluptatibus.</p>
+    </Aside>
+
+    <Section class="project-example" id="main-project">
+            <div id="main-project">
+                ADD A BIG OL RESPONSIVE IMG HERE
+            </div>
+    </Section> 
+
+    <Section class="project-example" id="side-project1">
+        <div id="side-project1">
+            ADD A BIG OL RESPONSIVE IMG HERE
+        </div>
+</Section> 
+
+<Section class="project-example" id="side-project2">
+    <div id="side-project2">
+        ADD A BIG OL RESPONSIVE IMG HERE
+    </div>
+</Section> 
+
+<footer>
+    <h3>Contact Me</h3>
+        <ul>
+            <li>Phone</li>
+            <li>Email</li>
+            <li>Github</li>
+        </ul>
+</footer>
+
+    </main>
 </body>
 </html>
