minor positioning adjustments

--- a/Index.html
+++ b/Index.html
@@ -62,6 +62,7 @@
     </div>
 <br>
 
+
     <div class="button">
         <a href="#">
             <button>
@@ -77,26 +78,28 @@
             </a>
     </div>
 
-
     <div class="button">
         <a href="#">
             <button>
-    <Section class="project-example" id="side-project2">
+    <Section class="project-example" id="side-project1">
         <img class="under-construction" src="images/under-construction1.png" alt="stick figure beginning construction" />
-
-       <div class="container1">
-    <p> 
-        Future Project
-    </p>
+        <div class="container1">
+         <p>Future Project
+          
+        </p>
         </div>
     </Section> 
         </button>
             </a>
     </div>
 
+   
+
+
+
     <Aside id="about-me">
         <h2>About Me</h2>
-            <p>Aspiring developer from Wisconsin. I'm 35 years old and married. My interests include fitness, sports, and nerd culture such as gaming and anime. As a developer I'm hoping to maybe work on an application in one of these spaces one day!</p>
+            <p>Aspiring developer from Wisconsin. I'm 35 years old and married. My interests include fitness, sports, and nerd culture such as gaming and anime. As a developer I'm hoping to maybe work on an application in one of these spaces one day! Looking to settle into a career that is constantly evolving and I can master as I age.</p>
     </Aside>
 
     <footer id="contact-me">
