spelling error fix in about me

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <aside id="about-me">
         <h2>About Me</h2>
         <p>
-          My name is Nick Sokolowski and I'm an sspiring developer from Wisconsin. I'm 35 years old and married. My
+          My name is Nick Sokolowski and I'm an aspiring developer from Wisconsin. I'm 35 years old and married. My
           interests include fitness, sports, and nerd culture such as gaming and
           anime. As a developer I'm hoping to maybe work on an application in
           one of these spaces one day! Looking to settle into a career that is
